src/test/ui/walk-struct-literal-with.nll.stderr
error[E0382]: borrow of moved value: `start`
  --> $DIR/walk-struct-literal-with.rs:16:20
   |
LL |     let start = Mine{test:"Foo".to_string(), other_val:0};
   |         ----- move occurs because `start` has type `Mine`, which does not implement the `Copy` trait
LL |     let end = Mine{other_val:1, ..start.make_string_bar()};
   |                                   ----- value moved here
LL |     println!("{}", start.test);
   |                    ^^^^^^^^^^ value borrowed here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
